--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
+    "source-map-url": "^0.4.1",
     "swiper": "^6.8.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
